--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header-image"></div>
     <div class="container">
         <header>
-            <h1>Skapa din drömdrink! 🍹</h1>
+            <h1>Från inget till drink</h1>
             <p class="tagline">Välj vad du har i barskåpet, så fixar vi resten.</p>
         </header>
 
